--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -231,12 +231,15 @@
               {%- render 'price', product: product, use_variant: true, show_badges: false, price_class: 'price--large' -%}
             </div>
           
-            <div {{ block.shopify_attributes }}>
-              {%- form 'product', product, id: 'product-form-installment', class: 'installment caption-large' -%}
-                <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}">
-                {{ form | payment_terms }}
-              {%- endform -%}
-            </div>
+            {% assign hide_shop_pay = true %}
+            {% if hide_shop_pay == false %}
+              <div {{ block.shopify_attributes }}>
+                {%- form 'product', product, id: 'product-form-installment', class: 'installment caption-large' -%}
+                  <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}">
+                  {{ form | payment_terms }}
+                {%- endform -%}
+              </div>
+              {% endif %}
             {% if product.metafields.my_fields.color_varies_text == true %}
               <style>
                .product__info-wrapper .price .price__container::after {
