--- a/sections/returns-page.liquid
+++ b/sections/returns-page.liquid
@@ -74,7 +74,8 @@
 </ul>
 
 <h3>Taxes, fees, and customs</h3>
-<p>SaunaSpace&nbsp;now collects Canadian sales tax, customs duty, or related handling fees on your behalf.</p>
+<p>SaunaSpace now collects Canadian sales tax, customs duty, or related handling fees on your behalf.</p>
+<p>Please note that all Canadian sales tax, customs duty and handling fees are non-refundable.</p>
 
 <h3>Looking for the status of your order?</h3>
 <p>Check your inbox for tracking details or email us at <a href="mailto:support@sauna.space">hello@sauna.space</a>.
@@ -95,10 +96,10 @@
 <li>Providing a barcode label from your courier</li>
 <li>Providing a signed customs invoice</li>
 </ul>
-<p>Customer-arranged shipments should be picked up Monday through Friday between 8 a.m. and 5 p.m. CT, excluding holidays, from our shop:</p>
+<p>Customer-arranged shipments should be picked up Monday through Friday between 12 p.m. and 5 p.m. CST, excluding holidays, from our shop:</p>
 <p>SaunaSpace<br>
-1330 E Prathersville Rd<br>
-Columbia, MO 65202 USA</p>
+905 Clinkscales Rd<br>
+Columbia, MO 65203 USA</p>
 
 <h3>How to make a return</h3>
 <p>If you’re not satisfied with your order, follow these simple steps within the return period:</p>
@@ -109,7 +110,9 @@ Columbia, MO 65202 USA</p>
 </ul>
 
 <h3>Taxes and Customs</h3>
-<p>SaunaSpace&nbsp;automatically collects taxes, customs duty,&nbsp;and related handling fees on your behalf during checkout. Please&nbsp;note that this service is not currently offered for shipment to the following countries:</p>
+<p>SaunaSpace&nbsp;automatically collects taxes, customs duty,&nbsp;and related handling fees on your behalf during checkout.</p>
+<p>Please note that all VAT, customs duty and handling fees are non-refundable.</p>
+<p>The collection of duties and VAT in our checkout is not currently offered for shipment to the following countries:</p>
 <p>Africa</p>
 <ul>
 <li>Republic of Cabo Verde (CV)</li>
@@ -166,13 +169,15 @@ Columbia, MO 65202 USA</p>
 <li>We are also not responsible for lost packages. That's why we ship Signature-Required by default. If you elect to have your shipment delivered without a signature requirement, it is your responsibility once the shipment is marked delivered by the carrier.</li>
 <li>All returned or exchanged items will be inspected upon return:
   <ul>
-    <li>Items returned to us in “like-new” condition will be fully refunded.</li><li>Do not wash any fabric products; washed items are not eligible to be returned.</li>
+    <li>Items returned to us in “like-new” condition will be fully refunded.</li>
+    <li>Do not wash any fabric products; washed items are not eligible to be returned.</li>
     <li>Identified damages due to user abuse or improper packing may result in prorated reduction of refund amount.</li><li>Failure to use towels to prevent sweat from reaching the product may lead damage that may result in prorated reduction of refund amount. This is relevant for purchases that include a Bamboo Grounding Mat, such as Luminati Infrared Sauna, Faraday Infrared Sauna and Sauna Enclosure Kit. Refer to our <a href="https://go.sauna.space/sauna-manual" target="_blank">Sauna Operation Manual</a>.</li>
   </ul>
 </li>
 <li>We are not responsible for personal data or items left in returned merchandise.</li>
 <li>We are not responsible for any consequential or incidental damage resulting from the sale or use of any product bought from us. We are responsible for the monetary value of the product only.</li>
 <li>You must complete your return drop-off or pickup within fourteen (14) days of receipt of your return ship labels. Otherwise, your return request will be canceled.</li>
+<li>Currently, we are unable to refund any international sales tax (e.g. VAT, GST, HST), customs duty and handling fees.</li>
 </ul>
 
 <h3>More questions?</h3>
