--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -31,9 +31,9 @@
   <link id="ModelViewerOverride" rel="stylesheet" href="{{ 'component-model-viewer-ui.css' | asset_url }}" media="print" onload="this.media='all'">
 {%- endif -%}
 
-<div class="free-shippingBG">
+<!-- <div class="free-shippingBG">
     <section class="free-shipping">Free shipping and returns in the contiguous US and Canada on orders over $200.</section>
-</div>
+</div> -->
 
 
 	<div class="stickyBG">
