--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -713,7 +713,7 @@ $(document).ajaxComplete(function(event, request, settings){
     {
     cartMode: 'mini-cart', //drawer or mini-cart  
     drawerDirection: 'right', //cart drawer from left or right
-    displayModal: true, //display success modal when adding product to cart
+    displayModal: false, //display success modal when adding product to cart
 }
   );
 </script>
