--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -489,12 +489,12 @@
                   </div>
                     
                     {% else %}
-                        <button
-                        type="submit"
-                        name="add"
-                        class="product-form__submit button button--full-width {% if block.settings.show_dynamic_checkout and product.selling_plan_groups == empty %}button--secondary{% else %}button--primary{% endif %}"
-                      {% if product.selected_or_first_available_variant.available == false %}disabled{% endif %}
-                      >
+                    <button
+                    type="submit"
+                    name="add"
+                    class="js-go-cart-add-to-cart product-form__submit button button--full-width {% if block.settings.show_dynamic_checkout and product.selling_plan_groups == empty %}button--secondary{% else %}button--primary{% endif %}"
+                                        {% if product.selected_or_first_available_variant.available == false %}disabled{% endif %}
+                  >
                           <span>
                             {%- if product.selected_or_first_available_variant.available -%}
                               {{ 'products.product.add_to_cart' | t }}
