--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -1,5 +1,5 @@
 <!--cart button-->
-<div class="go-cart__trigger js-go-cart-trigger">
+<div class="nav-link go-cart__trigger js-go-cart-trigger">
 
     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
         <path d="M18.936 5.564c-.144-.175-.35-.207-.55-.207h-.003L6.774 4.286c-.272 0-.417.089-.491.18-.079.096-.16.263-.094.585l2.016 5.705c.163.407.642.673 1.068.673h8.401c.433 0 .854-.285.941-.725l.484-4.571c.045-.221-.015-.388-.163-.567z"></path>
