reimplementation of gocart.js
Former-commit-id: b14b570f020024a0bfcbbd2341bb981ef81c6955
Former-commit-id: abee11743f44a5b87b0ad4e52ae686be0599c790

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -22,8 +22,8 @@
 
     <link rel="canonical" href="{{ canonical_url }}" />
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin />
-    {{ 'gocart.js' | asset_url | script_tag }}
-
+    <!-- {{ 'gocart.js' | asset_url | script_tag }} -->
+    <!-- <script src="/node_modules/@bornfight/gocart/build/index.js" /> -->
     {%- if settings.favicon != blank -%}
     <link
       rel="icon"
